@@ -1,3 +1,4 @@
+//
 // This file is part of the aMule Project
 //
 // Copyright (c) 2003-2004 aMule Project ( http://www.amule-project.net )
@@ -16,6 +17,7 @@
 // You should have received a copy of the GNU General Public License
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+// 
 
 #include <unistd.h>			// Needed for close(2) and sleep(3)
 #include <wx/defs.h>
@@ -957,6 +959,7 @@ void CamuleApp::OnlineSig(bool zero /* reset stats (used on shutdown) */)
 } //End Added By Bouc7
 
 // Gracefully handle fatal exceptions and print backtrace if possible
+#include <cxxabi.h>
 void CamuleApp::OnFatalException()
 {
 #ifndef __WXMSW__
@@ -977,15 +980,88 @@ void CamuleApp::OnFatalException()
 		fprintf(stderr, "* Could not get symbol names for backtrace\n");
 		return;
 	}
-
-	fprintf(stderr, "\nOOPS! - Seems like aMule crashed.\n");
-	fprintf(stderr, "\tVersion is: %s\n", unicode2char(GetMuleVersion()));
-	fprintf(stderr, "--== BACKTRACE FOLLOWS: ==--\n\n");
 	
-	for (int i = 0; i < num_entries; i++) {
-		fprintf(stderr, "[%d] %s\n", i, bt_strings[i]);
+	wxString libname[100];
+	wxString funcname[100];
+	wxString address[100];
+	wxString AllAddresses;
+	for (int i = 0; i < num_entries; ++i) {
+		wxString wxBtString = char2unicode(bt_strings[i]);
+		int posLPar = wxBtString.Find(wxT('('));
+		int posRPar = wxBtString.Find(wxT(')'));
+		int posLBra = wxBtString.Find(wxT('['));
+		int posRBra = wxBtString.Find(wxT(']'));
+		bool hasFunction = true;
+		if (posLPar == -1 || posRPar == -1) {
+			if (posLBra == -1 || posRBra == -1) {
+				/* It is important to have exactly num_entries 
+				 * addresses in AllAddresses */
+				AllAddresses += wxT("0x0000000 ");
+				continue;
+			}
+			posLPar = posLBra;
+			hasFunction = false;
+		}
+		/* Library name */
+		int len = posLPar;
+		libname[i] = wxBtString.Mid(0, len);
+		/* Function name */
+		if (hasFunction) {
+			int posPlus = wxBtString.Find(wxT('+'));
+			if (posPlus == -1) posPlus = posRPar;
+			len = posPlus - posLPar - 1;
+			funcname[i] = wxBtString.Mid(posLPar + 1, len);
+			if (funcname[i].Mid(0,2) == wxT("_Z")) {
+				int status;
+				char *demangled = abi::__cxa_demangle(unicode2char(funcname[i]), NULL, NULL, &status);
+				if (!status) {
+					funcname[i] = char2unicode(demangled);
+				}
+				if (demangled) {
+					free(demangled);
+				}
+			}
+		}
+		/* Address */
+		if ( posLBra == -1 || posRBra == -1) {
+			AllAddresses += wxT("0x0000000 ");
+		} else {
+			len = posRBra - posLBra - 1;
+			address[i] = wxBtString.Mid(posLBra + 1, len);
+			AllAddresses += address[i] + wxT(" ");
+		}
 	}
 	free(bt_strings);
+	
+	/* Get line numbers from addresses */
+	wxString command = wxString::Format(wxT("addr2line -C -f -s -e /proc/%d/exe "), getpid()) + AllAddresses;
+	wxArrayString out;
+	wxExecute(command, out);
+
+	/* Print the backtrace */
+	fprintf(stderr, "\n--------------------------------------------------------------------------------\n");
+	fprintf(stderr, "OOPS! Houston, we have a situation: seems like aMule crashed!\n");
+	fprintf(stderr, "Program version is: %s\n", unicode2char(GetMuleVersion()));
+	fprintf(stderr, "----------------------------=| BACKTRACE FOLLOWS: |=----------------------------\n\n");
+	for (int i = 0; i < num_entries; ++i) {
+		/* If we have no function name, use the result from addr2line */
+		if (funcname[i].IsEmpty()) {
+			funcname[i] = out[2*i];
+		}
+		wxString btline =
+			wxString::Format(wxT("[%d] "), i) +
+			funcname[i] +
+			wxT(" in ");
+		/* If addr2line did not find a line number, use bt_string */
+		if (out[2*i+1].Mid(0,2) == wxT("??")) {
+			btline += libname[i] + wxT("[") + address[i] + wxT("]");
+		} else {
+			btline += out[2*i+1];
+		}
+		/* Print */
+		fprintf(stderr, "%s\n", unicode2char(btline) );
+	}
+	fprintf(stderr, "\n--------------------------------------------------------------------------------\n");
 #endif
 
 #ifdef __BSD__
